# wt2

./: Makefile  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/api/: main.py
api/api/controllers/: store_controller.py
api/api/model/: client_error.py  data_reader.py  requests.py
api/api/routes/: main_router.py  store_router.py
client/: Dockerfile  angular.json  package-lock.json  package.json
client/src/app/: app.component.html  app.config.ts  app.routes.ts
client/src/app/components/graph/: graph.component.html  graph.component.ts
client/src/app/components/graph/components/store-picker/: store-picker.component.html  store-picker.component.ts
client/src/app/services/: store-data-service.ts
client/src/app/types/: filter.model.ts  request.model.ts  store.model.ts
client/src/deployment/prod/: index.html
client/src/environments/: environment.prod.ts
scripts/: install_deps.sh  run_client.sh  run_server.sh  run_server_prod.sh
