[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["wachtelhund <hampus.nilsson222@hotmail.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
